# Event-management-Application-API

./: .dockerignore  .env.backup  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  env.example  gunicorn_config.py  manage.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: build.yml  deploy.yml  doppler.yml  main_event.yml  pr_event.yml  ruff.yml
auths/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
auths/migrations/: 0001_initial.py  0002_alter_usertoken_token.py  0003_alter_usertoken_token.py  0004_rename_usertoken_useractivationtoken.py
events/: admin.py  apps.py  enums.py  forms.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
events/filters/: category.py
events/managers/: banners.py
events/migrations/: 0001_initial.py  0002_event_created_by_alter_event_total_participants.py  0003_alter_event_options.py  0004_event_is_verified.py  0005_eventsignup.py  0006_eventsignup_is_verified.py  0007_alter_eventsignup_options_and_more.py  0008_event_ending_time_event_starting_time_and_more.py  0009_remove_event_ending_time_remove_event_starting_time_and_more.py  0010_alter_event_created_by_and_more.py  0011_alter_event_options_alter_eventsignup_options.py  0012_location_remove_event_latitude_and_more.py  0013_remove_event_location_location_event.py  0014_remove_event_banner_banner.py  0015_schedule.py  0016_alter_event_options_alter_eventsignup_options_and_more.py  0017_alter_banner_event.py  0018_alter_eventsignup_event.py  0019_remove_event_is_verified_event_status_and_more.py  0020_alter_eventsignup_user.py  0021_category_event_categorty.py  0022_rename_categorty_event_category.py  0023_alter_category_description.py
events/models/: banner.py  category.py  event.py  location.py  schedule.py  signup.py
events/signals/: banner.py  category.py  events.py  signup.py  triggers.py
nginx-server/: Dockerfile  nginx.conf
preferences/: admin.py  enums.py  models.py
preferences/migrations/: 0001_initial.py  0002_remove_emailtemplate_name_emailtemplate_email_type.py  0003_rename_body_emailtemplate_body_html_and_more.py
root/: admin.py  base_admin.py  celery.py  env_config.py  jazzmin.py  middleware.py  settings.py  tasks.py  urls.py  views.py
seeds/: preferences.json
(+11 files in other folders)
